--- a/corporate_website_with_bootstrap/index.html
+++ b/corporate_website_with_bootstrap/index.html
@@ -127,8 +127,7 @@
      <div class="container-fluid bg-dark text-light py-5">
       <h1 class="text-center">We Provide Best Tutotrials for Web Development</h1>
       <h1 class="text-center">(Full Stck Web Development)</h1>
-      <p class="text-center"> Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fugiat nihil nobis eius provident, consequatur consectetur excepturi tempora consequuntur deserunt quia. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Provident ducimus consequuntur accusamus reprehenderit. Quia ducimus, consequuntur reiciendis mollitia dicta explicabo.
-      </p>
+      <p class="text-center"> A full stack web developer is a person who can develop both client and server software. In addition to mastering HTML and CSS, he/she also knows how to: Program a browser (like using JavaScript, jQuery, Angular, or Vue)</p>
     </div>
     <!-- about us ends -->
     <!-- service start -->
